<resources>
    <string name="hello_world">详细信息页面待完成</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_shot_and_locate">ShotAndLocateActivity</string>
    <string name="title_activity_my_camera">MyCameraActivity</string>
    <string name="title_activity_locate">LocateActivity</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_entry">考勤打卡</string>
    <string name="title_activity_apartment">ApartmentActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="title_activity_customer_picker">请选择联系人</string>
    <string name="my_remind">我的提醒</string>
    <string name="work_remind">工作提醒</string>
    <string name="instruction_remind">指令提醒</string>
    <string name="dairy_remind">日志提醒</string>
    <string name="check_remind">审批提醒</string>
    <string name="focus_remind">我关注的</string>
    <string name="schedule_remind">日程提醒</string>
    <string name="need_to_respond">需要回执的</string>
    <string name="reply">回复我的</string>
    <string name="send">我发出的</string>
    <string name="atme">AT我的</string>
    <string name="atmysector">AT我的部门</string>
    <string name="praise">我收到的赞</string>
    <string name="settime">时间：</string>
    <string name="setstartdate">起始日期：</string>

    <string name="setfinishdate">结束日期：</string>
    <string name="missoncomplete">完成任务数量：</string>
    <string name="newkh">新增客户数量：</string>
    <string name="newlxr">新增联系人数量：</string>
    <string name="bfcsh">拜访联系人数量：</string>
    <string name="confirm">确 定</string>
    <string name="cancel">取 消</string>
    <string name="check_schedule_remind">查看提醒</string>
    <string name="setrepeat">重复：</string>

    <drawable name="clr_white">#ffffff</drawable>
    <drawable name="clr_normal">#f3f3f3</drawable>
    <drawable name="clr_pressed">#01bad4</drawable>

    <string name="setting_remind">接受消息推送</string>
    <string name="sound">声音</string>
    <string name="vibration">振动</string>
    <string name="title_activity_bmjmission_statics">任务详情</string>
    <string name="title_activity_bmjkhstatistics">客户详情</string>
    <string name="title_activity_bmjlxrstatics">联系人详情</string>
    <string name="title_activity_bmjbfstatics">拜访详情</string>
</resources>
