<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:background="#106bb9">


        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/imageButton3"
            android:src="@drawable/conleft" />

        <Spinner
            android:layout_width="145dp"
            android:layout_height="45dp"
            android:id="@+id/bmjspinner_main"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确定"
            android:id="@+id/queding"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="13dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="?android:attr/listDivider"
        />



    <LinearLayout
        android:focusable="true"  android:focusableInTouchMode="true"
        android:id="@+id/date_line"
        android:layout_margin="12dp"

        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/setstartdate"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="3"
            android:id="@+id/setstartdatetxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:focusable="true"  android:focusableInTouchMode="true"        android:id="@+id/date_line2"
        android:layout_margin="12dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/setstartdate"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="3"
            android:id="@+id/setfinishdatetxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="8px"
        android:background="#edf3f5" />

    <LinearLayout
        android:focusable="true"  android:focusableInTouchMode="false"
        android:id="@+id/statics_show2"

        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/newkh"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical" />
        <TextView
            android:id="@+id/txshow2"
            android:text="0人"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/rightsta"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/imageView"
            android:layout_weight="1" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#edf3f5" />
    <LinearLayout
        android:focusable="true"  android:focusableInTouchMode="false"
        android:id="@+id/statics_show3"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/newlxr"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp" />
        <TextView
            android:id="@+id/txshow3"
            android:text="0人"

            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/rightsta"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/imageView2"
            android:layout_weight="1" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#edf3f5" />
    <LinearLayout
        android:focusable="true"  android:focusableInTouchMode="false"
        android:id="@+id/statics_show4"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/bfcsh"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp" />
        <TextView
            android:id="@+id/txshow4"
            android:layout_weight="3"
            android:text="0人"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/rightsta"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/imageView3"
            android:layout_weight="1" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#edf3f5" />
    <LinearLayout
        android:focusable="true"  android:focusableInTouchMode="false"
        android:id="@+id/statics_show"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/missoncomplete"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp" />
        <TextView
            android:id="@+id/txshow1"
            android:layout_weight="3"
            android:text="0个"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/rightsta"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/imageView4"
            android:layout_weight="1" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#edf3f5" />

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:text="完成合同数量："
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_weight="3"
            android:text="0个"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/rightsta"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/imageView5"
            android:layout_weight="1" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#edf3f5" />

</LinearLayout>